<resources>
    <string name="app_name">Doctor</string>


    <string name="doc_add">NEW DOCTOR</string>
    <string name="doctor_Name">Name</string>
    <string name="doctor_age">Age</string>
    <string name="doctor_designation">Designation</string>
    <string name="doctor_address">Address</string>
    <string name="doctor_number">Contact Number</string>
    <string name="doctor_ward">Ward Number</string>
    <string name="submit">Submit</string>

    <string name="doc_list">DOCTOR LIST</string>
    <string name="doc_1">Doctor 1</string>
    <string name="doc_2">Doctor 2</string>
    <string name="doc_3">Doctor 3</string>
    <string name="doc_4">Doctor 4</string>
    <string name="doc_5">Doctor 5</string>
    <string name="doc_6">Doctor 6</string>
    <string name="doc_7">Doctor 7</string>
    <string name="doc_8">Doctor 8</string>
    <string name="doc_9">Doctor 9</string>
    <string name="doc_10">Doctor 10</string>


    <string name="edit_details">EDIT DETAILS</string>
    <string name="view">Dr.XYZ</string>

    <string name="search">Search</string>
    <string name="save">Save Changes</string>
    <string name="delete">Delete</string>
    <string name="edit">EDIT</string>

    <string name="doc_main">DOCTOR MENU</string>

</resources>
