<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context=".doctor_viewAll">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="278dp"
        android:layout_height="411dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#EEEEEE"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_text">

        <TextView
            android:id="@+id/doc_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/doc_1"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/doc_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/doc_2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/doc_3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/doc_3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/doc_4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/doc_4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/doc_5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/doc_5"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/doc_6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/doc_6"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/doc_7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/doc_7"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/doc_8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/doc_8"
            android:textSize="18sp" />

    </LinearLayout>

    <SearchView
        android:id="@+id/search_text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="205dp"
        android:layout_height="136dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676"
        app:srcCompat="@drawable/doctorsall" />

</androidx.constraintlayout.widget.ConstraintLayout>