<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context=".doctor_view">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="312dp"
        android:layout_height="371dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#EEEEEE"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787">

        <TextView
            android:id="@+id/doc_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/doctor_Name"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/doctor_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/doc_age"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/doctor_age"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/doc_desig"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/doctor_designation"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/doc_adrs"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/doctor_address"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/editText8"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/doc_tpno"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/doctor_number"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/editText9"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/doc_ward"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/doctor_ward"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/editText10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="71dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/view"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="editDoctors"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="deleteDoctor"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="134dp"
        android:layout_height="156dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.562"
        app:srcCompat="@drawable/doctor2" />
</androidx.constraintlayout.widget.ConstraintLayout>